# esolmet_explorer_fork

./: .gitignore  LICENSE  README.md  app.py  app_dataagg.py  app_explorer.py  configuration.ini  conversor.py  main.py  pruebas.py  pyproject.toml  requirements.txt  sam_wind.csv  sam_wind3.csv  script.py  setup.py  wind-turbines.json
components/: explorador.py  helper_text.py  panels.py
data/: 2010_ESOLMET.csv  2011_ESOLMET.csv  2012_ESOLMET.csv  2013_ESOLMET.csv  2014_ESOLMET.csv  2015_ESOLMET.csv  2017_ESOLMET.csv  2019_ESOLMET.csv  2020_ESOLMET.csv  2021_ESOLMET.csv  2022_ESOLMET.csv
data/csv/: 2023_ESOLMET.csv
data/parquet/: 2010_ESOLMET.parquet  2011_ESOLMET.parquet  2012_ESOLMET.parquet  2013_ESOLMET.parquet  2014_ESOLMET.parquet  2015_ESOLMET.parquet  2016_ESOLMET.parquet  2017_ESOLMET.parquet  2018_ESOLMET.parquet  2019_ESOLMET.parquet  2020_ESOLMET.parquet  2021_ESOLMET.parquet  2022_ESOLMET.parquet  2023_ESOLMET.parquet  2024_ESOLMET.parquet
data_testing/: __init__.py  main.py
utils/: config.py  data_processing.py  graficadores.py  plots.py  wind_rose.py
utils/data_testing/: main.py
validation_tools/: __init__.py  main.py
wind_simulation/: wind-turbines.json
