[project]
name = "esolmet-explorer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.3.0",
    "faicons>=0.2.2",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "missingno>=0.5.2",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "plotly>=6.1.1",
    "pvlib>=0.12.0",
    "shiny>=1.4.0",
    "shinyswatch>=0.9.0",
    "shinywidgets>=0.6.2",
    "windrose>=1.9.2",
]
